--- a/AutomationArchitectProject/pom.xml
+++ b/AutomationArchitectProject/pom.xml
@@ -81,7 +81,20 @@
             <artifactId>poi-ooxml-schemas</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
 
     <build>
