--- a/AutomationArchitectProject/src/test/java/log4j.properties
+++ b/AutomationArchitectProject/src/test/java/log4j.properties
@@ -1,14 +1,13 @@
 
 #Root logger option
-log4j.rootLogger=debug, file
+log4j.rootLogger=DEBUG, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D:\\Projects\\AutomationArchitectProject\\src\\test\\resoureces\\logs\\selenium.log
+log4j.appender.file.File=D:\\Projects\\AutomationArchitectProject\\src\\test\\resources\\logs\\selenium.log
 log4j.appender.file.maxFileSize=5000KB
 log4j.appender.file.maxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-#do not opened the old file. Create a new log file every time
-log4j.appender.file.Append=false
+log4j.appender.file.Append=true
 
 #Application Logs
 log4j.logger.devpinoyLogger=DEBUG, dest1
@@ -17,6 +16,5 @@ log4j.appender.dest1.maxFileSize=5000KB
 log4j.appender.dest1.maxBackupIndex=3
 log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
 log4j.appender.dest1.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss} %c %m%n
-log4j.appender.dest1.File=D:\\Projects\\AutomationArchitectProject\\src\\test\\resoureces\\logs\\application.log
-#do not opened the old file. Create a new log file every time
-log4j.appender.dest1.Append=false
+log4j.appender.dest1.File=D:\\Projects\\AutomationArchitectProject\\src\\test\\resources\\logs\\application.log
+log4j.appender.dest1.Append=true
