--- a/AutomationArchitectProject/src/test/java/log4j.properties
+++ b/AutomationArchitectProject/src/test/java/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.file.maxFileSize=5000KB
 log4j.appender.file.maxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-log4j.appender.file.Append=true
+log4j.appender.file.Append=false
 
 #Application Logs
 log4j.logger.devpinoyLogger=DEBUG, dest1
@@ -17,4 +17,4 @@ log4j.appender.dest1.maxBackupIndex=3
 log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
 log4j.appender.dest1.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss} %c %m%n
 log4j.appender.dest1.File=D:\\Projects\\AutomationArchitectProject\\src\\test\\resources\\logs\\application.log
-log4j.appender.dest1.Append=true
+log4j.appender.dest1.Append=false
